# cmaketest

./: CMakeLists.txt  CMakePresets.json  CMakeProject1.cpp  CMakeProject1.h  Dockerfile
math/: CMakeLists.txt  MathFunctions.cc
