# CMakeList.txt: CMakeProject1 的 CMake 專案，在此包含來源及定義
# 專案專屬邏輯。
#
cmake_minimum_required (VERSION 3.8)

# 如果支援，則為 MSVC 編譯器啟用熱重新載入。
if (POLICY CMP0141)
  cmake_policy(SET CMP0141 NEW)
  set(CMAKE_MSVC_DEBUG_INFORMATION_FORMAT "$<IF:$<AND:$<C_COMPILER_ID:MSVC>,$<CXX_COMPILER_ID:MSVC>>,$<$<CONFIG:Debug,RelWithDebInfo>:EditAndContinue>,$<$<CONFIG:Debug,RelWithDebInfo>:ProgramDatabase>>")
endif()

project ("CMakeProject1")


set(OpenCV_DIR "C:/opencv/build")

# find_package(OpenCV REQUIRED)


# Include the OpenCV headers
include_directories(${OpenCV_INCLUDE_DIRS})


aux_source_directory(. DIR_SRCS)

add_subdirectory(math)

# 將來源新增到此專案的可執行檔。
add_executable (CMakeProject1 ${DIR_SRCS})

target_link_libraries(CMakeProject1 MathFunctions ${OpenCV_LIBS})


if (CMAKE_VERSION VERSION_GREATER 3.12)
  set_property(TARGET CMakeProject1 PROPERTY CXX_STANDARD 20)
endif()

# TODO: 新增測試，並視需要安裝目標。
